2007-05-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components/TreeViewCellContainer.cs: Made the class
	  public and added EditingDone event.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment/DeployProjectServiceExtension.cs: Avoid
	  copying files when the target destination is the same file.

2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.mdp: Updated.

2007-03-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp: Updated.
	* MonoDevelop.Components.Commands/CommandManager.cs,
	  MonoDevelop.Components.Commands/ICommandTargetVisitor.cs: Added
	  support for custom command target visitors.

2007-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandToolbar.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs: Avoid disabling
	  the whole toolbar when a gui lock is requested.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Added method for
	  temporarily disabling all commands.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, Makefile.am, MonoDevelop.Components.mdp: Flush.

2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp: Synchronized MD project and
	  Makefile.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Destroy the
	  context menu after it is hidden. Makes sure all menu items are
	  disconnected from accelerators. Should fix bug #80645.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandMenu.cs: Avoid showing
	  unnecessary item separators.

2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandArrayInfo.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs,
	  MonoDevelop.Components.Commands/CommandInfo.cs: Allow command