@@ -1,26 +1,35 @@
 using System;
-using System.Collections;
 
 using Gtk;
-using Gnome;
 
 namespace MonoDevelop.Components {
 	public class IconView : ScrolledWindow {
-		IconList iconList;
-		
-		Hashtable userData = new Hashtable ();
-	
-		object currentlySelected;
+		Gtk.IconView iconView;
+		ListStore store;
+
 		public event EventHandler IconSelected;
 		public event EventHandler IconDoubleClicked;
-				
+
 		public IconView ()
 		{
-			iconList = new IconList (100, null, 0);
-			iconList.IconSelected += new IconSelectedHandler (HandleIconSelected);
-			iconList.KeyPressEvent += new KeyPressEventHandler (HandleKeyPressed);
-			
-			this.Add (iconList);
+			store = new ListStore (typeof (Gdk.Pixbuf), typeof (string), typeof (object));
+			iconView = new Gtk.IconView (store);
+			iconView.PixbufColumn = 0;
+			iconView.ColumnSpacing = 8;
+			iconView.RowSpacing = 8;
+			CellRendererText cr = new CellRendererText ();
+			cr.Alignment = Pango.Alignment.Center;
+			cr.WrapWidth = 80;
+			cr.WrapMode = Pango.WrapMode.Word;
+			cr.Yalign = 0.0f;
+			iconView.PackEnd (cr, true);
+			iconView.ItemWidth = 80;
+			iconView.SetAttributes (cr, "text", 1);
+
+			iconView.SelectionChanged += new EventHandler (HandleIconSelected);
+			iconView.ActivateCursorItem += new ActivateCursorItemHandler (HandleDoubleClick);
+
+			this.Add (iconView);
 			this.WidthRequest = 350;
 			this.HeightRequest = 200;
 			this.ShadowType = Gtk.ShadowType.In;
@@ -28,55 +37,58 @@ namespace MonoDevelop.Components {
 
 		public void AddIcon (Image icon, string name, object obj)
 		{
-			int itm = iconList.AppendPixbuf (icon.Pixbuf, "/dev/null", name);
-			userData.Add (itm, obj);
+			store.AppendValues (icon.Pixbuf, name, obj);
 		}
 		
 		public void AddIcon (string stock, Gtk.IconSize sz, string name, object obj)
 		{
-			int itm = iconList.AppendPixbuf (iconList.RenderIcon (stock, sz, ""), "/dev/null", name);
-			userData.Add (itm, obj);
+			store.AppendValues (iconView.RenderIcon (stock, sz, String.Empty), name, obj);
 		}
 		
 		public object CurrentlySelected {
 			get {
-				return currentlySelected;
+				TreePath[] paths = iconView.SelectedItems;
+				if (paths.Length > 0)
+				{
+					TreeIter iter;
+					store.GetIter (out iter, paths[0]);
+					return store.GetValue (iter, 2);
+				}
+				return null;
 			}
 			set {
-				foreach (DictionaryEntry de in userData) {
-					if (de.Value == value) {
-						iconList.SelectIcon ((int)de.Key);
-						return;
+				TreeIter foundIter = TreeIter.Zero, iter;
+				store.GetIterFirst (out iter);
+				
+				do {
+					if (value == store.GetValue (iter, 2)) {
+						foundIter = iter;
+						break;
 					}
+				} while (store.IterNext (ref iter));
+				
+				if (foundIter.Stamp != TreeIter.Zero.Stamp) {
+					TreePath path = store.GetPath (foundIter);
+					iconView.SelectPath (path);
 				}
 			}
 		}
-		
-		void HandleKeyPressed (object o, KeyPressEventArgs args)
+
+		void HandleDoubleClick (object o, ActivateCursorItemArgs e)
 		{
-			if (currentlySelected == null)
-				return;
-			
-			if (args.Event.Key == Gdk.Key.Return && IconDoubleClicked != null)
+			if ( IconDoubleClicked != null)
 				IconDoubleClicked (this, EventArgs.Empty);
 		}
-		
-		void HandleIconSelected (object o, IconSelectedArgs args)
+
+		void HandleIconSelected (object o, EventArgs args)
 		{
-			currentlySelected = userData [args.Num];
-			
 			if (IconSelected != null)
 				IconSelected (this, EventArgs.Empty);
-
-			if (args.Event != null && args.Event.Type == Gdk.EventType.TwoButtonPress)
-				if (IconDoubleClicked != null)
-					IconDoubleClicked (this, EventArgs.Empty);
 		}
 
 		public void Clear ()
 		{
-			iconList.Clear ();
-			userData.Clear ();
+			store.Clear ();
 		}
 	}
 }
